--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style rel="stylesheet" href="./style.css"></style>
     <script src="./main.js" type="module"></script>
     <title>Index</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>hej hej</h1>
-    
-</body>
+
+    <h2>CLATA</h2>
+  </body>
 </html>
